Agrego scripts en blanco

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script src="https://kit.fontawesome.com/405d5358c0.js" crossorigin="anonymous"></script>
 	<title>Comisión - Javascript login</title>
 </head>
-<!-- Paleta de colores: https://colorhunt.co/palette/66bfbfeaf6f6ffffffff0063 -->
+<!-- Color palette: https://colorhunt.co/palette/66bfbfeaf6f6ffffffff0063 -->
 
 <body>
 	<main>
@@ -25,5 +25,6 @@
 		</section>
 	</main>
 </body>
+<script src="./scripts/validation.js"></script>
 
 </html>
