--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 			<div class="header"><i class="fa-solid fa-rocket"></i></div>
 			<form>
 				<input type="email" name="email" id="user" placeholder="Ingrese su usuario" required autofocus maxlength="50">
-				<input type="password" name="pass" id="password" placeholder="Ingrese su contraseña" maxlength="8" required>
-				<button type="submit">Ingresar</button>
+				<input type="password" name="pass" id="pass" placeholder="Ingrese su contraseña" maxlength="8" required>
+				<button type="submit" id="button">Ingresar</button>
 			</form>
-			<div class="footer"><i class="fa-solid fa-circle-exclamation"></i>Usuario o contraseña incorrectos</div>
+			<div id="footer" class="footer"></div>
 			</div>
 		</section>
 	</main>
