--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 			<form>
 				<input type="email" name="email" id="user" placeholder="Ingrese su usuario" required autofocus maxlength="50">
 				<input type="password" name="pass" id="password" placeholder="Ingrese su contraseña" maxlength="8" required>
-				<button type="submit">Ingresar</button>
+				<button id="btn" type="submit">Ingresar</button>
 			</form>
-			<div class="footer"><i class="fa-solid fa-circle-exclamation"></i>Usuario o contraseña incorrectos</div>
+			<div id="message" class="footer">
+				<!-- <i class="fa-solid fa-circle-exclamation"></i>Usuario o contraseña incorrectos -->
+			</div>
 			</div>
 		</section>
 	</main>
