--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 		</section>
 	</main>
 </body>
-<script src="./scripts/validation.js"></script>
+<script src="./scripts/shared.js"></script>
+<script src="./scripts/login.js"></script>
+
 
 </html>
