Fin de la clase

--- a/main.html
+++ b/main.html
@@ -24,10 +24,8 @@
 
   <body>
     <main>
-      <section>
-        <!-- Muestra un contenido si el logueo esta o mensaje de error si esta mal -->
-        <h2>Logueado correctamente</h2>
-      </section>
+      <section id="content"></section>
     </main>
   </body>
+  <script src="/scripts/controlled.js"></script>
 </html>
